--- a/ZBreakout/ZBreakout.vcxproj.filters
+++ b/ZBreakout/ZBreakout.vcxproj.filters
@@ -84,6 +84,12 @@
     <ClCompile Include="Game\Weapon.cpp">
       <Filter>Game</Filter>
     </ClCompile>
+    <ClCompile Include="Game\Zombie.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
+    <ClCompile Include="Game\Random.cpp">
+      <Filter>Game</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine.h">
@@ -153,6 +159,15 @@
       <Filter>Game</Filter>
     </ClInclude>
     <ClInclude Include="Game\Inventory.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Zombie.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Effect.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="Game\Random.h">
       <Filter>Game</Filter>
     </ClInclude>
   </ItemGroup>
