--- a/ZBreakout/ZBreakout.vcxproj.filters
+++ b/ZBreakout/ZBreakout.vcxproj.filters
@@ -188,5 +188,8 @@
     <ClInclude Include="GUI\RoundedShape.hpp">
       <Filter>GUI</Filter>
     </ClInclude>
+    <ClInclude Include="Game\Door.h">
+      <Filter>Game</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
